# samplemcp

./: README.md  pyproject.toml
src/samplemcp/: __main__.py
src/samplemcp/hivetablemcp/: server.py
src/samplemcp/workbenchmcp/: __init__.py  cloudera_mcp.py  server.py  utils.py
src/samplemcp/workbenchmcp/functions/: __init__.py  batch_list_projects.py  create_application.py  create_experiment.py  create_experiment_run.py  create_job.py  create_job_run.py  create_model_build.py  create_model_deployment.py  delete_all_jobs.py  delete_application.py  delete_experiment.py  delete_experiment_run.py  delete_experiment_run_batch.py  delete_job.py  delete_model.py  delete_project_file.py  get_application.py  get_experiment.py  get_experiment_run.py  get_job.py  get_job_run.py  get_model.py  get_model_build.py  get_model_deployment.py  get_project_id.py  get_runtimes.py  list_applications.py  list_experiments.py  list_job_runs.py  list_jobs.py  list_model_builds.py  list_model_deployments.py  list_models.py  stop_job_run.py  (+13 more)
src/workbenchmcp/: cloudera_mcp.py  server.py
src/workbenchmcp/functions/: create_experiment_run.py  create_model_build.py  create_model_deployment.py  delete_all_jobs.py  delete_application.py  delete_experiment_run.py  delete_experiment_run_batch.py  delete_job.py  delete_model.py  delete_project_file.py  get_experiment_run.py  get_project_id.py  get_runtimes.py  list_applications.py  list_experiments.py  list_job_runs.py  list_model_deployments.py  stop_application.py  stop_job_run.py  update_job.py  update_project_file_metadata.py  upload_folder.py
