[project]
name = "samplemcp"
version = "0.1.0"
description = "MCP server with some dummpy tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.11.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/samplemcp/__init__.py"

[project.scripts]
samplemcp = "samplemcp.__main__:main"
testrepo = "samplemcp.__main__:testrepo"
workbenchmcp = "samplemcp.__main__:workbenchmcp"
